--- a/app/src/main/res/layout/content_bcreader.xml
+++ b/app/src/main/res/layout/content_bcreader.xml
@@ -19,6 +19,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/bcreader_disablescantext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|left"
+            android:textColor="#7F00"
+            android:text="@string/bcreader_disablescan"/>
 
         <LinearLayout
             android:orientation="vertical"
@@ -40,10 +47,59 @@
                 android:background="#77FF0000"/>
 
             <LinearLayout
+                android:id="@+id/bcreader_redbar"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="8"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/bcreader_itemlist_wrap"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
+            android:gravity="bottom">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/bcreader_scannedtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textColor="#FFFFFF"
+                    android:text="@string/bcreader_scanneditems"
+                    android:layout_weight="1"
+                    android:layout_gravity="left|center_vertical" />
+
+                <Button
+                    android:id="@+id/bcreader_showhide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bcreader_hide"
+                    android:layout_weight="1"
+                    android:layout_gravity="right|center_vertical" />
+
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/bcreader_itemlist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:visibility="visible" />
+
 
         </LinearLayout>
     </FrameLayout>
