--- a/app/src/main/res/layout/content_bcreader.xml
+++ b/app/src/main/res/layout/content_bcreader.xml
@@ -65,7 +65,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp"/>
+                android:layout_height="wrap_content"
+                android:minHeight="150dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
