--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,15 +26,11 @@
     <LinearLayout
         android:id="@+id/bcreader_itemlist_wrap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="vertical"
         android:gravity="bottom">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="150dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +46,7 @@
                 android:textColor="#FFFFFF"
                 android:text="@string/bcreader_scanneditems"
                 android:layout_weight="1"
-                android:layout_gravity="left|center_vertical" />
+                android:layout_gravity="start|center_vertical" />
 
             <Button
                 android:id="@+id/bcreader_showhide"
@@ -58,11 +54,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bcreader_hide"
                 android:layout_weight="1"
-                android:layout_gravity="right|center_vertical" />
+                android:layout_gravity="start|center_vertical" />
 
         </LinearLayout>
 
-        <ListView
+        <net.fishandwhistle.openpos.items.MaxSizeListView
             android:id="@+id/bcreader_itemlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
