update scan list appearance

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -63,7 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:focusableInTouchMode="true"/>
 
 
     </LinearLayout>
