--- a/app/src/main/res/layout/item_scanner.xml
+++ b/app/src/main/res/layout/item_scanner.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,37 +9,59 @@
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin">
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/item_text"
         android:layout_weight="1"
-        android:layout_gravity="start|center_vertical"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/item_name"
+            android:textColor="#000"
+            android:text="Name"
+            android:layout_gravity="start|center_vertical"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/item_desc"
+            android:text="sku:00000001"
+            android:layout_gravity="start|center_vertical"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0">
 
-        <Button
-            android:text="-"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/item_button_minus"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:id="@+id/item_qty"/>
+            android:layout_gravity="center_vertical"
+            android:padding="5dp"
+            android:id="@+id/item_button_minus"
+            app:srcCompat="@drawable/ic_item_delete" />
 
         <Button
-            android:text="+"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/item_button_plus"/>
+            android:minWidth="40dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/item_qty"
+            android:selectAllOnFocus="true"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/item_button_plus"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_item_add" />
     </LinearLayout>
 
 </LinearLayout>
