--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="net.fishandwhistle.openpos.BarcodeReaderActivity">
+    tools:context="net.fishandwhistle.openpos.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -35,14 +35,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:background="?attr/colorPrimary"
             android:weightSum="1">
+
+            <ImageButton
+                android:padding="5dp"
+                android:src="@drawable/ic_action_keynumselector"
+                android:id="@+id/bcreader_keynum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bcreader_showall"
+                android:layout_gravity="start|center_vertical"
+                android:background="@android:color/transparent"/>
+
+            <ImageButton
+                android:padding="5dp"
+                android:src="@drawable/ic_action_keytextselector"
+                android:id="@+id/bcreader_keytext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bcreader_showall"
+                android:layout_gravity="start|center_vertical"
+                android:background="@android:color/transparent"/>
 
             <TextView
                 android:id="@+id/bcreader_scannedtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:textColor="#FFFFFF"
                 android:text="@string/bcreader_scanneditems"
                 android:layout_weight="1"
@@ -54,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bcreader_showall"
                 android:layout_weight="1"
-                android:layout_gravity="start|center_vertical" />
+                android:layout_gravity="end|center_vertical" />
 
         </LinearLayout>
 
