--- a/app/src/main/res/layout/item_scanner.xml
+++ b/app/src/main/res/layout/item_scanner.xml
@@ -4,17 +4,20 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin">
 
     <LinearLayout
+        android:id="@+id/item_textwrap"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:clickable="true"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:background="@drawable/bg_focusable">
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,7 +38,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0">
+        android:layout_weight="0"
+        android:layout_gravity="center_vertical">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -43,7 +47,7 @@
             android:layout_gravity="center_vertical"
             android:padding="5dp"
             android:id="@+id/item_button_minus"
-            app:srcCompat="@drawable/ic_item_delete" />
+            app:srcCompat="@drawable/ic_item_remove" />
 
         <Button
             android:layout_width="wrap_content"
