--- a/app/src/main/res/layout/fragment_scanned_item_detail.xml
+++ b/app/src/main/res/layout/fragment_scanned_item_detail.xml
@@ -34,54 +34,37 @@
             android:layout_gravity="center_vertical|end"
             android:gravity="end"
             android:id="@+id/detail_quantity"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:textColor="#000"/>
 
     </LinearLayout>
 
-
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:id="@+id/detail_code"
+        android:text="01234567890"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TableLayout
+            android:id="@+id/detail_keyvalues"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="start|center_vertical"
-            android:id="@+id/detail_code" />
+            android:columnCount="2"
+            android:paddingTop="10dp">
 
-        <TextView
-            android:id="@+id/detail_codetype"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="end"
-            android:layout_gravity="end|center_vertical"
-            android:text="@string/detail_codetype"/>
+            <include layout="@layout/scanned_item_details_kv"/>
 
-    </LinearLayout>
+            <include layout="@layout/scanned_item_details_kv"/>
 
+        </TableLayout>
 
+    </ScrollView>
 
-
-    <TextView
-        android:text="@string/detail_scantime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detail_scantime" />
-
-    <TextView
-        android:text="JSON: %s"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detail_json" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/details_jsonsource"
-        android:id="@+id/detail_jsonsource"/>
 
 </LinearLayout>
