--- a/app/src/main/res/layout/item_scanner.xml
+++ b/app/src/main/res/layout/item_scanner.xml
@@ -19,13 +19,30 @@
         android:paddingBottom="15dp"
         android:background="@drawable/bg_focusable">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/item_name"
-            android:textColor="#000"
-            android:text="Name"
-            android:layout_gravity="start|center_vertical"/>
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/item_loading"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@drawable/loading"
+                android:paddingEnd="5dp"
+                android:paddingRight="5dp"
+                android:layout_gravity="center_vertical"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/item_name"
+                android:textColor="#000"
+                android:text="Name"
+                android:layout_gravity="start|center_vertical"/>
+
+        </LinearLayout>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
