--- a/app/src/main/res/layout/scanned_item_details_kv.xml
+++ b/app/src/main/res/layout/scanned_item_details_kv.xml
@@ -6,12 +6,14 @@
         android:layout_weight="0"
         android:text="key"
         android:id="@+id/key"
-        android:paddingEnd="10dp"/>
+        android:paddingEnd="10dp"
+        android:paddingRight="10dp"/>
 
     <TextView
         android:layout_weight="1"
         android:text="value"
         android:id="@+id/value"
-        android:textColor="#000"/>
+        android:textColor="#000"
+        android:autoLink="web|email"/>
 
 </TableRow>
